feature: modified Open API API Server
